{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 57,
  "lineage": "a4194f48-4ac5-84b6-c623-48ca66195930",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "11.11.1.33",
            "id": "eipalloc-069d74b5ac87937ea",
            "network_interface": "eni-0e51793dc09823396"
          },
          "dependencies": [
            "aws_network_interface.dev_nic",
            "aws_security_group.dev_sg",
            "aws_subnet.dev_sn",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8c184d5f6ae949",
            "arn": "arn:aws:ec2:us-east-1:515966508922:instance/i-01169fa423afd6c42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01169fa423afd6c42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e51793dc09823396"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e51793dc09823396",
            "private_dns": "ip-11-11-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.11.1.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047cedc7caa8ec8df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01da3297095ef2b0f",
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bcc7018d2b17445d"
            ]
          },
          "dependencies": [
            "aws_network_interface.dev_nic",
            "aws_security_group.dev_sg",
            "aws_subnet.dev_sn",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:internet-gateway/igw-0e47312449294bd62",
            "id": "igw-0e47312449294bd62",
            "owner_id": "515966508922",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0f3738bfe49206928"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:network-interface/eni-0e51793dc09823396",
            "id": "eni-0e51793dc09823396",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:e2:c6:eb:ad:e9",
            "owner_id": "515966508922",
            "private_ip": "11.11.1.33",
            "private_ip_list": [
              "11.11.1.33"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.11.1.33"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bcc7018d2b17445d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01da3297095ef2b0f",
            "tags": {
              "Name": "Dev_nic"
            },
            "tags_all": {
              "Name": "Dev_nic"
            }
          },
          "dependencies": [
            "aws_security_group.dev_sg",
            "aws_subnet.dev_sn",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:route-table/rtb-0fe0b9119fea8a6ad",
            "id": "rtb-0fe0b9119fea8a6ad",
            "owner_id": "515966508922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e47312449294bd62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_rt"
            },
            "tags_all": {
              "Name": "dev_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3738bfe49206928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbe2417677cc85ba",
            "route_table_id": "rtb-0fe0b9119fea8a6ad",
            "subnet_id": "subnet-01da3297095ef2b0f"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_rt",
            "aws_subnet.dev_sn",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:security-group/sg-0bcc7018d2b17445d",
            "description": "Dev Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcc7018d2b17445d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250127155609544700000001",
            "name_prefix": "terraform-",
            "owner_id": "515966508922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_sg"
            },
            "tags_all": {
              "Name": "dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3738bfe49206928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:subnet/subnet-01da3297095ef2b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "11.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da3297095ef2b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966508922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_sn"
            },
            "tags_all": {
              "Name": "dev_sn"
            },
            "vpc_id": "vpc-0f3738bfe49206928"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:vpc/vpc-0f3738bfe49206928",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.11.0.0/16",
            "default_network_acl_id": "acl-05e245ade0cccbb64",
            "default_route_table_id": "rtb-0f5cad79251fcf826",
            "default_security_group_id": "sg-0283453e0a6a95eeb",
            "dhcp_options_id": "dopt-01533c4e99d22f677",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3738bfe49206928",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5cad79251fcf826",
            "owner_id": "515966508922",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}